@@ -1,7 +1,11 @@
 /*Generated by genstub. Do not edit.*/
 
+#line 387 "null.stub"
+
 #define LIBSAGITTARIUS_BODY
 
+
+#line 388 "null.stub"
 
 #include <sagittarius.h>
 
